<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_bg_color_while"
    android:orientation="vertical" >

    <!-- 上方图片 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/reg_top_img"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:scaleType="fitXY"
            android:src="@drawable/logindb" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:orientation="vertical">

        <!-- 用户名 -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_login"
                android:textColor="@color/activity_bg_color_gray"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/tv_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dip"
                android:background="@drawable/shape_login_edit"
                android:hint="@string/hint_user_login"
                android:lines="1"
                android:padding="6dip"
                android:textSize="15sp" />
        </LinearLayout>

        <!-- 密码 -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pass_login"
                android:textColor="@color/activity_bg_color_gray"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/tv_user_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dip"
                android:background="@drawable/shape_login_edit"
                android:hint="@string/hint_pass_login"
                android:lines="1"
                android:padding="6dip"
                android:password="true"
                android:textSize="15sp" />
        </LinearLayout>

        <!-- 确认密码 -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/again_pass_login"
                android:textColor="@color/activity_bg_color_gray"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/tv_again_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dip"
                android:background="@drawable/shape_login_edit"
                android:hint="@string/hint_again_pass_login"
                android:lines="1"
                android:padding="6dip"
                android:password="true"
                android:textSize="15sp" />
        </LinearLayout>

        <!-- 手机号 -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_number"
                android:textColor="@color/activity_bg_color_gray"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/tv_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dip"
                android:background="@drawable/shape_login_edit"
                android:hint="@string/hint_phone_number_login"
                android:inputType="number"
                android:lines="1"
                android:padding="6dip"
                android:textSize="15sp" />
        </LinearLayout>

        <!-- 邮箱 -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_email"
                android:textColor="@color/activity_bg_color_gray"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/tv_email_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dip"
                android:background="@drawable/shape_login_edit"
                android:hint="@string/hint_email_login"
                android:inputType="textEmailAddress"
                android:lines="1"
                android:padding="6dip"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>
        <Button
            android:id="@+id/btn_reg_submit"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:gravity="center"
            android:background="@drawable/shape_login_submit_button"
            android:text="@string/submit_reg"
            android:textColor="@color/activity_bg_color_gray"
            android:textSize="20sp" />
</LinearLayout>