<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_dialog"
    android:gravity="center"
    android:minHeight="180dip"
    android:minWidth="90dip"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/station_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/stationName"
        android:background="@drawable/shape_dialog_text_blue"
        android:textColor="@color/activity_bg_color_while"
        android:textSize="18sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.5dip"
        android:background="@color/activity_bg_color_blue" />

    <TextView
        android:id="@+id/start_station"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/setStart"
        android:textColor="@color/boot_dialog_text_bg"
        android:textSize="18sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.5dip"
        android:background="@color/activity_bg_color_blue" />

    <TextView
        android:id="@+id/stop_station"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/setStop"
        android:textColor="@color/boot_dialog_text_bg"
        android:textSize="18sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.5dip"
        android:background="@color/activity_bg_color_blue" />

    <!-- 站外信息 -->

    <TextView
        android:id="@+id/station_outside_info"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/intraInfo"
        android:textColor="@color/boot_dialog_text_bg"
        android:textSize="18sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.5dip"
        android:background="@color/activity_bg_color_blue" />

    <!-- 站内信息 -->
    <TextView
        android:id="@+id/station_intra_info"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/outsideInfos"
        android:textColor="@color/boot_dialog_text_bg"
        android:textSize="18sp" />

</LinearLayout>