<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_bg_color_while"
    android:orientation="vertical" >
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:layout_weight="1" >

        <ImageView
            android:id="@+id/iv_top_img"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:minHeight="300dp"
            android:scaleType="fitXY"
            android:src="@drawable/logindb" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_gravity="top"
        android:layout_weight="1"
        android:gravity="top"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_login"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/tv_user_name"
                android:layout_width="match_parent"
                android:layout_height="39dp"
                android:layout_marginLeft="6dip"
                android:background="@drawable/shape_login_edit"
                android:hint="@string/hint_user_logins"
                android:lines="1"
                android:padding="6dip"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pass_login"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/tv_user_pass"
                android:layout_width="match_parent"
                android:layout_height="39dp"
                android:layout_marginLeft="6dip"
                android:background="@drawable/shape_login_edit"
                android:hint="@string/hint_pass_login"
                android:lines="1"
                android:padding="6dip"
                android:password="true"
                android:textSize="15sp" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:background="@drawable/shape_login_submit_button"
            android:text="@string/submit_login"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/update_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="284dp"
            android:layout_marginTop="10dp"
            android:text="忘记密码"
            android:textColor="@color/activity_bg_color_blue"
            android:textSize="15sp" />

        <Button
            android:id="@+id/tv_no_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:background="@color/white"
            android:text="免费注册"
            android:textColor="@color/activity_bg_color_blue"
            android:textSize="18sp" />
    </LinearLayout>
</LinearLayout>
